fix horizontal scroll; fix z-index text/cover

--- a/src/css/components/intro-episode.scss
+++ b/src/css/components/intro-episode.scss
@@ -1,6 +1,6 @@
 .intro-episode {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -10,7 +10,8 @@
 
   > .text {
     // align-self: flex-end;
-    // z-index: 10;
+    z-index: 99;
+    pointer-events: none;
   }
 
   > .text .title {
@@ -103,7 +104,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
