--- a/src/css/components/intro-text.scss
+++ b/src/css/components/intro-text.scss
@@ -1,7 +1,7 @@
 .intro-text {
   // margin-top: 25vh;
   display: flex;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   justify-content: flex-end;
   // align-items: flex-end;
